--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,11 +1,12 @@
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
   $padding: 10px;
-  min-width: calc(100% - #{$padding} * 2);
-  min-height: calc(100% - #{$padding} * 2);
   padding: $padding;
   background: var(--gpStoreDarkerGrey);
   z-index: 9999;
